5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1679_1872.log
== TEST (2019-04-30 17:17:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("eixo de x: "))
y=float(input("eixo de y: "))

if ((x>0)and(y>0)):
	print("Q1")
elif ((x<0)and(y>0)):
	print("Q1")
elif ((x<0)and(y<0)):
	print("Q3")
elif ((x>0)and(y<0)):
	print("Q4")
elif ((x==0)and(y!=0):
	print ("Eixo de x")
elif ((y!=0)and(y==0):
	print ("Eixo de y")
elif ((x==0)and(y==0)):
	print ("origem")
-- ERROR:
File "XXXX", line 13
    elif ((x==0)and(y!=0):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:17:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("eixo de x: "))
y=float(input("eixo de y: "))

if ((x>0)and(y>0)):
	print("Q1")
elif ((x<0)and(y>0)):
	print("Q1")
elif ((x<0)and(y<0)):
	print("Q3")
elif ((x>0)and(y<0)):
	print("Q4")
elif ((x==0)and(y!=0)):
	print ("Eixo de x")
elif ((y!=0)and(y==0):
	print ("Eixo de y")
elif ((x==0)and(y==0)):
	print ("origem")
-- ERROR:
File "XXXX", line 15
    elif ((y!=0)and(y==0):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:17:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("eixo de x: "))
y=float(input("eixo de y: "))

if ((x>0)and(y>0)):
	print("Q1")
elif ((x<0)and(y>0)):
	print("Q1")
elif ((x<0)and(y<0)):
	print("Q3")
elif ((x>0)and(y<0)):
	print("Q4")
elif ((x==0)and(y!=0)):
	print ("Eixo de x")
elif ((y!=0)and(y==0)):
	print ("Eixo de y")
elif ((x==0)and(y==0)):
	print ("origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:20:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("eixo de y: "))
x=float(input("eixo de x: "))

if ((y>0)and(x>0)):
	print("Q1")
elif ((y<0)and(x>0)):
	print("Q1")
elif ((y<0)and(x<0)):
	print("Q3")
elif ((y>0)and(x<0)):
	print("Q4")
elif ((y==0)and(x!=0)):
	print ("Eixo de x")
elif ((y!=0)and(y==0)):
	print ("Eixo de y")
elif ((y==0)and(x==0)):
	print ("origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:53:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
y=float(input("eixo de y: "))
x=float(input("eixo de x: "))

if ((y>0)and(x>0)):
	print("Q1")
elif ((y<0)and(x>0)):
	print("Q1")
elif ((y<0)and(x<0)):
	print("Q3")
elif ((y>0)and(x<0)):
	print("Q4")
elif ((y==0)and(x!=0)):
	print ("Eixo de x")
elif ((y!=0)and(x==0)):
	print ("Eixo de y")
elif ((y==0)and(x==0)):
	print ("origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
